# PO1-Projekt

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Makefile  devbox.json  premake5.lua
src/: main.c  main.cpp
src/entity/: entity.hpp
src/entity/bunker/: bunker.cpp  bunker.hpp
src/entity/enemy/: enemy.cpp  enemy.hpp
src/entity/player/: player.cpp  player.hpp
src/entity/powerup/: powerup.cpp  powerup.hpp
src/entity/projectile/: projectile.cpp  projectile.hpp
src/entity/ufo/: ufo.cpp  ufo.hpp
src/gui/pause/: pause.c  pause.cpp  pause.h
src/utils/collision/: collision.cpp  collision.hpp
src/utils/highscore/: highscore.cpp  highscore.hpp
src/utils/spawner/: spawner.cpp  spawner.hpp
src/utils/states/: gamestate.hpp
